--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prepare-release": "cross-env npm run changelog && npm run build"
   },
   "dependencies": {
+    "aurelia-event-aggregator": "^1.0.1",
     "aurelia-framework": "^1.0.0",
     "aurelia-pal": "^1.0.0",
     "aurelia-loader-webpack": "^2.1.0"
